* ROBOT-40: Unable to crawl files which contains space character in the path.
git-svn-id: https://www.seasar.org/svn/sandbox/s2robot/trunk@135 a24fa471-b002-4554-a963-9a0eab8552e2